# bb2gf

./: .env.example  .gitignore  README.md  config.yml  pyproject.toml
src/: main.py
src/clients/: bitbucket_server.py  gitflic.py
src/core/: git_ops.py  migrator.py  utils.py
